Fix wrong z-index for main content area

--- a/web/wp-content/themes/bumblebee/sass/archive/_archive.scss
+++ b/web/wp-content/themes/bumblebee/sass/archive/_archive.scss
@@ -1,7 +1,6 @@
 /* archive content */
 .archive-page {
 	position: relative;
-	z-index: -1;
 
 	ul {
 		padding-left: 0;
