--- a/web/wp-content/themes/bumblebee/sass/listicle/_listicle.scss
+++ b/web/wp-content/themes/bumblebee/sass/listicle/_listicle.scss
@@ -1,6 +1,5 @@
 .listicle-page {
   position: relative;
-  z-index: -1;
 
   .content {
     max-width: $size__site-max-width;
