--- a/web/wp-content/themes/bumblebee/sass/site/primary/global.scss
+++ b/web/wp-content/themes/bumblebee/sass/site/primary/global.scss
@@ -112,7 +112,6 @@ img {
     @include dotted-background;
     min-height: 600px;
     margin: -75px auto;
-    z-index: -1;
   }
   &.prearticle {
     min-height: 300px;
